Fix for 7152519 causing build breakage.

XMLWordPrintable

    • 2d
    • b36
    • generic
    • generic
    • Not verified

        Since the fix for
        7152519: Dependency on non-POSIX header file <link.h> causes portability problem
         
        we are getting build breakages.
        /usr/X11R6//include -DINTERNAL_BUILD -c -o
        /tmp/jprt/P1/004108.jcg-integrator/source/build/linux-amd64/bootjdk/tmp/sun/sun.awt.X11/awt_xawt/obj64/OGLSurfaceData.o
        ../../../src/share/native/sun/java2d/opengl/OGLSurfaceData.c
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c: In function
        'OGLFuncs_OpenLibrary':
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning:
        implicit declaration of function 'dlopen'
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: error:
        'RTLD_LAZY' undeclared (first use in this function)
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: error: (Each
        undeclared identifier is reported only once
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: error: for
        each function it appears in.)
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: error:
        'RTLD_LOCAL' undeclared (first use in this function)
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning:
        assignment makes pointer from integer without a cast
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning:
        implicit declaration of function 'dlsym'
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning: cast
        to pointer from integer of different size
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning: cast
        to pointer from integer of different size
        ../../../src/share/native/sun/java2d/opengl/OGLFuncs.c:39: warning:
        implicit declaration of function 'dlclose'
        make[6]: ***
        [/tmp/jprt/P1/004108.jcg-integrator/source/build/linux-amd64/bootjdk/tmp/sun/sun.awt.X11/awt_xawt/obj64/OGLFuncs.o]
        Error 1
        make[6]: *** Waiting for unfinished jobs....
        make[6]: Leaving directory
        `/tmp/jprt/P1/004108.jcg-integrator/source/jdk/make/sun/xawt'
        make[5]: *** [library_parallel_compile] Error 2

        Looks like the actual fix changed since it was originally reviewed and tested.

              Assignee:
              Philip Race
              Reporter:
              Philip Race
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: