7159041: Fix for 7152519 causing build breakage

Reviewed-by: igor, jgodinez